Fixed logo aspect ratio on mobile devices

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -834,6 +834,7 @@ footer a:hover {
   }
   header h1 img {
     width: 70px;
+    height: 70px;
   }
   header h2 {
     font-size: 30px;
@@ -875,6 +876,7 @@ footer a:hover {
   }
   header h1 img {
     width: 60px;
+    height: 60px;
   }
   header h2 {
     font-size: 24px;
